--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,9 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 30 13:26:07 EAT 2025
-sdk.dir=C\:\\Users\\admin\\AppData\\Local\\Android\\Sdk
+#Mon Jan 12 09:34:28 EAT 2026
+sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
+
+# Gemini API Key - DO NOT commit this file to version control
+GEMINI_API_KEY=AIzaSyDH3qaYuGZBVMg76j9w3sLGz8H3X9VIKS8
+
